add naver site verification

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ google:
 google_site_verification : "8alVRZxWTXGULcfGw5TLo4OOY3ifOn4eZOoyd3y0YKc"
 bing_site_verification   :
 yandex_site_verification :
-naver_site_verification  :
+naver_site_verification  : "4574caa585fb4ee0067b0095ee9799d6518b1e79"
 
 # Social Sharing
 twitter:
