--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ google:
   instant_search         : # false (default), true
 # SEO Related
 google_site_verification : "8alVRZxWTXGULcfGw5TLo4OOY3ifOn4eZOoyd3y0YKc"
-bing_site_verification   :
+bing_site_verification   : "9BAB3C4928799F524417FE1DF1449564"
 yandex_site_verification :
 naver_site_verification  : "4574caa585fb4ee0067b0095ee9799d6518b1e79"
 
